--- a/exercicios-js/html/exercicios/style/style.css
+++ b/exercicios-js/html/exercicios/style/style.css
@@ -7,3 +7,25 @@
     position:absolute;
     top: 950px;
 }
+
+table{
+    border-collapse: collapse;
+}
+
+th, td{
+    padding: 10px;
+}
+
+thead tr{
+    border-bottom: solid 3px #444;
+}
+
+tbody tr:hover{
+    background-color: #dedede;
+}
+
+tfoot{
+    background-color: #444;
+    color: white;
+    font-weight: bold;
+}
