--- a/exercicios-js/html/exercicios/style/style.css
+++ b/exercicios-js/html/exercicios/style/style.css
@@ -1,17 +1,75 @@
-* body{
-    display: inline-block;
+/* Configuração Geral */
+*{
+    box-sizing: border-box;
     padding: 0;
-    left: 0;
+    margin: 0;
+}
+
+/* Elementos Base */
+
+body{
+    background-color: var(--preto);
+    font-family: Arial, Helvetica, sans-serif;
+    /* color: #fff; */
+}
+
+header .wrapper{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.wrapper nav:hover{
+    cursor: pointer;
+}
+
+/* Inicio */
+.exercicios{
+    text-align: center;
+    font-size: 15px;
+    background-color: #444;
+    color: white;
+}
+.wrapper{
+    display: flex;    
+    border: solid 2px #444;    
+    text-align: center;
+    background-color: rgb(95, 18, 167);
+    text-decoration: none;        
+}
+
+.wrapper a{
+    text-decoration: none;
+    margin-left: 35px;
+    font-size: 15px;
+    padding: 16px;
+    color: white;
+}
+
+/* Footer */
+footer{
+    width: 100%;
+    margin-top: 35%;
+    text-align: center;
+    font-size: 15px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 25px;
+    border: solid 1px #444;
+    background-color: rgb(95, 18, 167) ;
+    display: inline-flexbox;
 }
 
 /* Conteudo para abrir o Ajax */
 #conteudo{
     padding: 30px 30px;
+ 
 }
 
 #noticia{
     position: absolute;
-    top: 1000px;
+    /* top: 1000px; */
 }
 
 #inicio{
@@ -96,4 +154,28 @@ p{
     height: 100%;
     font-size: 14px;
     width: 0%;
+}
+
+/* Media Screen */
+
+@media screen and (max-width: 667px){
+    .exercicios{
+        display: flexbox;
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 667px){
+    .wrapper{
+        display: flexbox;        
+
+    }
+}
+
+@media screen and (max-width: 667px){
+    footer{        
+        padding: 20px 0;
+        margin-top: 96%;
+
+    }
 }
