--- a/weback/public/estilo.css
+++ b/weback/public/estilo.css
@@ -1,22 +1,1 @@
-* {
-  box-sizing: border-box;
-  margin: 0; }
-
-body {
-  background-color: #444; }
-
-h1 {
-  text-align: center;
-  color: white;
-  padding: 30px;
-  font-weight: bold; }
-
-.botao {
-  background-color: #19B3E6;
-  color: #fff;
-  font-size: 1.8em; }
-
-.botao:hover {
-  cursor: pointer; 
-}
-
+*{box-sizing:border-box;margin:0}body{background-color:#444}h1{text-align:center;padding:30px;font-weight:700}.botao,h1{color:#fff}.botao{background-color:#19b3e6;font-size:1.8em}.botao:hover{cursor:pointer}
