--- a/weback/src/assets/css/estilo.css
+++ b/weback/src/assets/css/estilo.css
@@ -5,7 +5,10 @@
 
 body{
     background-color: #444;
-    
+    background-image: url(../imgs/logo.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100vh;
 }
 
 h1{
