--- a/bootstrap/projeto-galeria/src/pages/template/header.html
+++ b/bootstrap/projeto-galeria/src/pages/template/header.html
@@ -1,10 +1,10 @@
-<div class="navbar navbar-dark box-shadow">
+<div class="navbar navbar-dark bg-dark box-shadow">
     <div class="container d-flex justify-content-between">
-        <a href="" class="navbar-brand d-flex align-items-center">
+        <a href="#" class="navbar-brand d-flex align-items-center">
             <i class="fa fa-camera-retro"></i><strong class="pl-2">Galeria</strong>
         </a>
-        <button class="navbar-toggler collapsed" data-toggle="" data-target="#header">
-            <snap class="navbar-toggle-icon"></snap>
+        <button class="navbar-toggler collapsed" data-toggle="collapse" data-target="#header">
+            <snap class="navbar-toggler-icon"></snap>
         </button>
 
     </div>
@@ -13,7 +13,7 @@
 <div class="bg-dark collapse" id="header">
     <div class="container">
         <div class="row">
-            <div class="col-sm-8 col-md py-4">
+            <div class="col-sm-8 col-md-7 py-4">
                 <h4 class="text-white">Sobre</h4>
                 <p class="text-muted">Escreva sobre vc...</p>
             </div>
@@ -21,8 +21,8 @@
                 <h4 class="text-white">Contato</h4>
                 <ul class="list-unstyled">
                     <li>
-                        <a href="Twitter" class="text-white"></a>
-                    </li>              
+                        <a href="#" class="text-white">Twitter</a>
+                    </li>
                     <li>
                         <a href="#" class="text-white">Facebok</a>
                     </li>
