--- a/bootstrap/projeto-galeria/src/scss/custom.scss
+++ b/bootstrap/projeto-galeria/src/scss/custom.scss
@@ -6,3 +6,14 @@
 .jumbotron .jumbotron-heading{
     font-weight: 300;
 }
+
+.footer{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    text-align: center;   
+}
+
+.footer p {
+    color: black;
+    font-weight: bold;
+}
