--- a/React/calculadora/src/index.css
+++ b/React/calculadora/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,28 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+
+@font-face {
+  font-family: 'RobotoMono';
+  src: url(./fonts/RobotoMono-Thin.ttf);
+}
+
+*{
+  font-family: 'RobotoMono', 'monospace';
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body{
+ display: flex;
+ height: 100vh;
+ justify-content: center;
+ align-items: center;
+ text-align: center;
+
+color: #fff;
+background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
