--- a/React/calculadora/src/components/Button.css
+++ b/React/calculadora/src/components/Button.css
@@ -25,10 +25,10 @@
 }
 
 .button.operation{
-    background-color: #fa8231;
+    background-color: #4c12b9;
     color: #fff;
 }
 
 .button.operation:active{
-    background-color: #fa8231cc;
+    background-color: #8e3aeecc;
 }
