--- a/React/crud/frontend/src/components/template/Header.css
+++ b/React/crud/frontend/src/components/template/Header.css
@@ -1,5 +1,6 @@
 header.header{
     background-color: #fff;
+    color: black;
     padding: 0px 15px;
     overflow: hidden;
     white-space: nowrap;
