--- a/React/crud/frontend/src/main/App.css
+++ b/React/crud/frontend/src/main/App.css
@@ -1,61 +1,80 @@
 :root {
     --bg-dark: #1a2f3a;
- 
     --logo-height: 100px;
     --header-height: 100px;
     --aside-width: 225px;
     --footer-height: 40px;
- 
-    --shadow:
-        0 2px 23px 0 rgba(0, 0, 0, 0.1),
-        0 2px 49px 0 rgba(0, 0, 0, 0.06);
+    --menu-top-height: 65px;
+    --shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.1), 0 2px 49px 0 rgba(0, 0, 0, 0.06);
 }
 
-body{
-    background: #232526;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */   
+body {
+    background: #232526;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #414345, #232526);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #414345, #232526);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     color: black;
 }
 
-*{
+* {
     box-sizing: border-box;
     font-family: 'Montserrat', 'sans-serif';
 }
 
+
 /* App Layout em Grid */
 
-.app{
+.app {
     margin: 0px;
     display: grid;
     grid-template-columns: var(--aside-width) 1fr;
-    grid-template-rows: 
-    var(--header-height) 
-    1fr
-    var(--footer-height);
-    grid-template-areas: 
-    "logo header"
-    "menu content"
-    "menu footer";
-    height: 100vh;        
+    grid-template-rows: var(--header-height) 1fr var(--footer-height);
+    grid-template-areas: "logo header" "menu content" "menu footer";
+    height: 100vh;
 }
 
-aside.Logo{
+aside.Logo {
     grid-area: logo;
 }
 
-header.header{
-    grid-area: header;    
+header.header {
+    grid-area: header;
 }
 
-aside.menu-area{
+aside.menu-area {
     grid-area: menu;
 }
 
-main.content{
+main.content {
     grid-area: content;
 }
 
-footer.footer{
+footer.footer {
     grid-area: footer;
+}
+
+@media (max-width: 768px) {
+    .app {
+        grid-template-rows: var(--header-height) var(--menu-top-height) 1fr var(--footer-height);
+        grid-template-columns: var(--aside-width) 1fr;
+        grid-template-areas: "logo header" "menu menu" "content content" "footer footer";
+    }
+}
+
+@media (max-width: 586px) {
+    .app {
+        grid-template-rows: var(--logo-height) var(--menu-top-height) 1fr var(--footer-height);
+        grid-template-columns: 1fr;
+        grid-template-areas: "logo" "menu" "content" "footer";
+    }
+}
+
+@media(max-width: 375px) {
+    .app {
+        grid-template-rows: var(--logo-height) var(--menu-top-height) 1fr var(--footer-height);
+        grid-template-columns: 1fr;
+        grid-template-areas: "logo" "menu" "content" "footer";
+    }
 }
