--- a/React/crud/frontend/src/components/template/Logo.css
+++ b/React/crud/frontend/src/components/template/Logo.css
@@ -16,7 +16,7 @@ aside.Logo img {
     }
 }
 
-@medi(max-widht: 375px) {
+@media(max-widht: 375px) {
     aside.logo img {
         width: 350px
     }
