Summary Sales Project

--- a/vue/qrcode/css/style.css
+++ b/vue/qrcode/css/style.css
@@ -4,7 +4,15 @@
   }
   
   * {
-    font-family: 'RobotoMono', monospace;
+    font-family: 'RobotoMono', monospace;    
+  }
+
+  h1{
+    margin-top: 50px;
+    padding: 10px 15px;
+    border: 1px solid #fff;  
+    background: #fff;
+    font-weight: bold;
   }
 
 body {
@@ -12,17 +20,22 @@ body {
     justify-content: center;
     text-align: center;
     
-    color: #FFF;
-    background: linear-gradient(to right, rgb(19, 106, 138), rgb(38, 120, 113));
+    color: #1A8B59;    
+    background: #1D976C;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #93F9B9, #1D976C);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #93F9B9, #1D976C); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
-input {
+input {  
     font-size: 2em;
     margin-bottom: 30px;
 }
 
 .output {
-    border: 1px solid #222;
-    padding: 30px 15px;
+    border:  #222;
+    padding: 50px 15px;
+    margin-top: 20px;
     background-color: #0006;
 }
+
