--- a/vue/qrcode/css/style.css
+++ b/vue/qrcode/css/style.css
@@ -9,10 +9,17 @@
 
   h1{
     margin-top: 50px;
+    margin-bottom: 10px;
     padding: 10px 15px;
     border: 1px solid #fff;  
     background: #fff;
     font-weight: bold;
+  }
+
+  h2{
+    
+    border: 1px solid #fff;
+    background: #fff;
   }
 
 body {
@@ -34,7 +41,7 @@ input {
 
 .output {
     border:  #222;
-    padding: 50px 15px;
+    padding: 20px 15px;
     margin-top: 20px;
     background-color: #0006;
 }
