--- a/vue/sales/css/style.css
+++ b/vue/sales/css/style.css
@@ -11,8 +11,10 @@ body{
 
 #app h1{
     color: #fff;
+    text-align: center;
 }
 
 .mt-5,.table{
-    color: rgb(230, 230, 230);
+    color: rgb(255, 255, 255);
+    font-weight: bold;
 }
