--- a/css/css/menu.css
+++ b/css/css/menu.css
@@ -1,31 +1,31 @@
 * {
-    margin: 0;    
+    margin: 0;
 }
 
-body{
+body {
     box-sizing: border-box;
     font-family: 'Oswald', 'sans-serif';
     background-color: lightgray;
 }
 
-.cabecalho{
+.cabecalho {
     background-color: #333;
     border-bottom: solid 5px #4faddb;
     height: 80px;
     box-sizing: content-box;
 }
 
-.logo{
+.logo {
     display: inline-block;
-    height: 50px;    
+    height: 50px;
     padding: 15px;
 }
 
-.logo img{
+.logo img {
     height: 100%;
 }
 
-.menu-toggle{
+.menu-toggle {
     float: right;
     color: #eee;
     background-color: #555;
@@ -36,68 +36,69 @@ body{
     margin: 20px 15px;
 }
 
-.menu{
+.menu {
     display: inline-block;
     vertical-align: top;
     height: 80px;
     padding: 25px;
 }
 
-.menu ul{
+.menu ul {
     margin: 0;
     padding: 0;
 }
 
-.menu li{
-    display: inline-block;    
+.menu li {
+    display: inline-block;
 }
 
-.cabecalho a{
+.cabecalho a {
     text-decoration: none;
     color: white;
-    font-size: 1.3em;    
+    font-size: 1.3em;
 }
 
-.menu a{
+.menu a {
     padding: 15px;
 }
 
-.autenticacao{
+.autenticacao {
     float: right;
     height: 80px;
     padding: 15px;
 }
 
-.menu a:hover,.menu a.selected{
+.menu a:hover,
+.menu a.selected {
     background-color: #4faddb;
     color: #000;
 }
 
-.botao{
+.botao {
     border-radius: 30px;
     padding: 10px 25px;
     margin: 10px;
 }
 
-.destaque{
+.destaque {
     background: #f50a31;
     color: white;
 }
 
-@media(min-width: 679px){
-    .menu-toggle{
+@media(min-width: 679px) {
+    .menu-toggle {
         display: none;
     }
 }
 
-@media(max-width: 680px){
-    .menu{
+@media(max-width: 680px) {
+    .menu {
         display: none;
     }
 }
 
-@media(max-width: 910px){
-    .autenticacao{
+@media(max-width: 910px) {
+    .autenticacao {
         display: none;
     }
 }
